Fixed the portrait overflowing s-hero, added content wrappers for width control on ultra-high resolution devices, started s-about.

--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,8 @@ Table of Contents:
     Hero
         Portrait
         Text
+    About
+        Line
     Footer
 */
 
@@ -18,7 +20,6 @@ html {
 body {
     margin: 0;
     padding: 0;
-    background-color: #2f615e;
 }
 
 /* Animations */
@@ -50,16 +51,24 @@ body {
 
 /* Hero */
 .s-hero {
-    height: 100%;
+    min-height: 100vh;
     width: 100%;
-    max-width: 1400px;
     margin: 0;
     padding: 0;
     background-color: #2f615e;
 }
 
+.s-hero-content {
+    height: 100%;
+    width: 100%;
+    max-width: 1400px;
+    margin: 0;
+    padding: 0;
+}
+
 /* Hero Portraits */
 .hero-portrait {
+    display: block;
     width: 100%;
     bottom: 0;
     right: 0;
@@ -75,6 +84,7 @@ body {
     z-index: 5;
     animation: scale-in 3s ease-in-out backwards;
     animation-delay: 1s;
+    image-rendering: optimizeSpeed;
 }
 
 .portrait-cutout-1 {
@@ -85,6 +95,7 @@ body {
     z-index: 4;
     animation: scale-in 3s ease-in-out backwards;
     animation-delay: 1.5s;
+    image-rendering: optimizeSpeed;
 }
 
 .portrait-cutout-2 {
@@ -95,6 +106,7 @@ body {
     z-index: 3;
     animation: scale-in 3s ease-in-out backwards;
     animation-delay: 2s;
+    image-rendering: optimizeSpeed;
 }
 
 .portrait-cutout-3 {
@@ -105,16 +117,18 @@ body {
     z-index: 2;
     animation: scale-in 3s ease-in-out backwards;
     animation-delay: 2.5s;
+    image-rendering: optimizeSpeed;
 }
 
 .portrait-cutout-4 {
-    position: absolute;
+    position: static;
     width: 100%;
     margin: 0;
     padding: 0;
     z-index: 1;
     animation: scale-in 3s ease-in-out backwards;
     animation-delay: 3s;
+    image-rendering: optimizeSpeed;
 }
 
 @media (min-width: 1000px) {
@@ -135,7 +149,6 @@ body {
         padding: 0;
         bottom: 0;
         right: 0;
-        z-index: 5;
         animation: scale-in 3s ease-in-out backwards;
         animation-delay: 1s;
     }
@@ -147,7 +160,6 @@ body {
         padding: 0;
         bottom: 0;
         right: 0;
-        z-index: 4;
         animation: scale-in 3s ease-in-out backwards;
         animation-delay: 1.5s;
     }
@@ -159,7 +171,6 @@ body {
         padding: 0;
         bottom: 0;
         right: 0;
-        z-index: 3;
         animation: scale-in 3s ease-in-out backwards;
         animation-delay: 2s;
     }
@@ -171,7 +182,6 @@ body {
         padding: 0;
         bottom: 0;
         right: 0;
-        z-index: 2;
         animation: scale-in 3s ease-in-out backwards;
         animation-delay: 2.5s;
     }
@@ -183,7 +193,6 @@ body {
         padding: 0;
         bottom: 0;
         right: 0;
-        z-index: 1;
         animation: scale-in 3s ease-in-out backwards;
         animation-delay: 3s;
     }
@@ -191,7 +200,6 @@ body {
 
 @media (min-width: 1200px) {
     .hero-portrait {
-        position: absolute;
         height: 100%;
         width: 60%;
     }
@@ -270,6 +278,49 @@ body {
         border-radius: 2rem;
     }
 }
+
+/* About */
+.s-about {
+    height: 5000px;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    z-index: 0;
+    background-color: #2f615e;
+}
+
+.s-about-content {
+    height: 100%;
+    width: 100%;
+    max-width: 1400px;
+    margin: 0;
+    padding: 0;
+}
+
+.about-text {
+    display: inline-block;
+    width: 40%;
+    margin: 0 5%;
+    padding: 0;
+}
+
+.about-text h1{
+    margin: 0;
+    padding: 1rem;
+}
+
+.about-text p{
+    margin: 0;
+    padding: 1rem;
+}
+
+.about-images {
+    height: 100%;
+    width: 40%;
+    margin: 0;
+    padding: 0;
+}
+
 
 /* Footer */
 #footer {
